Hallway Camera Test

--- a/Alfraid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Alfraid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -100,11 +100,6 @@ LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/AlfraidWork/SwingDoor.SwingDoor
-OpenAssetsAtExit=/Game/AlfraidWork/HallwayCamera.HallwayCamera
-OpenAssetsAtExit=/Game/AlfraidWork/StaticCamera.StaticCamera
-OpenAssetsAtExit=/Game/AlfraidWork/VentCamera.VentCamera
-OpenAssetsAtExit=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap.ThirdPersonExampleMap:PersistentLevel.ThirdPersonExampleMap
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -947,8 +942,8 @@ bHideUnrelatedNodes=False
 
 [RootWindow]
 ScreenPosition=X=214.667 Y=84.000
-WindowSize=X=1282.667 Y=757.333
-InitiallyMaximized=True
+WindowSize=X=1288.000 Y=762.667
+InitiallyMaximized=False
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
