Raycast from Player Pawn and Organization
I made a fuction that sends out a raycast/line trace from the botom of the player and if it hits a "Movable block", the block snaps to a scene component that I put on the pawn. I also created a bunch of forlders to sort my work.

--- a/Alfraid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Alfraid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -100,7 +100,7 @@ MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -848,38 +848,100 @@ Cube_Blueprint_C.Replication=True
 Cube_Blueprint_C.Input=True
 Cube_Blueprint_C.Actor=True
 Cube_Blueprint_C.Tick=True
+SkeletalMeshComponent.Variable=True
+SkeletalMeshComponent.TransformCommon=True
+SkeletalMeshComponent.Sockets=True
+SkeletalMeshComponent.Animation=True
+SkeletalMeshComponent.Mesh=True
+SkeletalMeshComponent.Materials=True
+SkeletalMeshComponent.Clothing=True
+SkeletalMeshComponent.MasterPoseComponent=True
+SkeletalMeshComponent.Physics=True
+SkeletalMeshComponent.Collision=True
+SkeletalMeshComponent.ClothingSimulation=True
+SkeletalMeshComponent.Lighting=True
+SkeletalMeshComponent.Rendering=True
+SkeletalMeshComponent.SkinWeights=True
+SkeletalMeshComponent.Navigation=True
+SkeletalMeshComponent.VirtualTexture=True
+SkeletalMeshComponent.Tags=True
+SkeletalMeshComponent.ComponentReplication=True
+SkeletalMeshComponent.Activation=True
+SkeletalMeshComponent.Cooking=True
+SkeletalMeshComponent.Events=True
+CharacterMovementComponent.Variable=True
+CharacterMovementComponent.Sockets=True
+CharacterMovementComponent.Character Movement (General Settings)=True
+CharacterMovementComponent.Character Movement: Walking=True
+CharacterMovementComponent.Character Movement: Jumping / Falling=True
+CharacterMovementComponent.Character Movement (Networking)=True
+CharacterMovementComponent.Character Movement: Swimming=True
+CharacterMovementComponent.Character Movement: Flying=True
+CharacterMovementComponent.Character Movement: Custom Movement=True
+CharacterMovementComponent.Character Movement (Rotation Settings)=True
+CharacterMovementComponent.Character Movement: Physics Interaction=True
+CharacterMovementComponent.Character Movement=True
+CharacterMovementComponent.Character Movement: Avoidance=True
+CharacterMovementComponent.RootMotion=True
+CharacterMovementComponent.Character Movement: NavMesh Movement=True
+CharacterMovementComponent.NavMovement=True
+CharacterMovementComponent.Velocity=True
+CharacterMovementComponent.PlanarMovement=True
+CharacterMovementComponent.MovementComponent=True
+CharacterMovementComponent.Tags=True
+CharacterMovementComponent.ComponentReplication=True
+CharacterMovementComponent.Activation=True
+CharacterMovementComponent.Cooking=True
+CharacterMovementComponent.Events=True
+CapsuleComponent.Variable=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Sockets=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Tags=True
+CapsuleComponent.ComponentReplication=True
+CapsuleComponent.Cooking=True
+CapsuleComponent.Events=True
+AssetManagerSettings.Asset Registry=True
+Engine.LevelStreaming=True
+RecastNavMesh.LOD=True
+MovableCube_C.Tick=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AlfraidWork/Cube_Blueprint
+MRUItem0=/Game/AlfraidWork/InteractObjects/MovableCube
 MRUItem1=/Game/AlfraidWork/AlfraidPawn
-MRUItem2=/Game/AlfraidWork/CameraSetBox
-MRUItem3=/Game/AlfraidWork/VentCamera
-MRUItem4=/Game/AlfraidWork/StaticCamera
-MRUItem5=/Game/AlfraidWork/VentCamera1
-MRUItem6=/Game/AlfraidWork/SwingDoor
-MRUItem7=/Game/AlfraidWork/CameraChangeBox
-MRUItem8=/Game/AlfraidWork/CageSwitch
-MRUItem9=/Game/AlfraidWork/NewBlueprint1
-MRUItem10=/Game/AlfraidWork/MovableCube
-MRUItem11=/Game/AlfraidWork/MoovableCube
-MRUItem12=/Game/AlfraidWork/DroppingCage
-MRUItem13=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem14=/Game/AlfraidWork/NewBlueprint
+MRUItem2=/Game/AlfraidWork/Cube_Blueprint
+MRUItem3=/Game/AlfraidWork/CameraSetBox
+MRUItem4=/Game/AlfraidWork/VentCamera
+MRUItem5=/Game/AlfraidWork/StaticCamera
+MRUItem6=/Game/AlfraidWork/VentCamera1
+MRUItem7=/Game/AlfraidWork/SwingDoor
+MRUItem8=/Game/AlfraidWork/CameraChangeBox
+MRUItem9=/Game/AlfraidWork/CageSwitch
+MRUItem10=/Game/AlfraidWork/NewBlueprint1
+MRUItem11=/Game/AlfraidWork/MovableCube
+MRUItem12=/Game/AlfraidWork/MoovableCube
+MRUItem13=/Game/AlfraidWork/DroppingCage
+MRUItem14=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem15=/Game/AlfraidWork/NewBlueprint
 
 [PlacementMode]
+RecentlyPlaced=/Game/AlfraidWork/InteractObjects/MovableCube.MovableCube;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
-RecentlyPlaced=/Game/AlfraidWork/CameraSetBox.CameraSetBox;
-RecentlyPlaced=/Game/AlfraidWork/HallwayCamera.HallwayCamera;
+RecentlyPlaced=/Game/AlfraidWork/Cameras/CameraSetBox.CameraSetBox;
+RecentlyPlaced=/Game/AlfraidWork/Cameras/HallwayCamera.HallwayCamera;
 RecentlyPlaced=/Game/AlfraidWork/CameraChangeBox.CameraChangeBox;
-RecentlyPlaced=/Game/AlfraidWork/VentCamera.VentCamera;
+RecentlyPlaced=/Game/AlfraidWork/Cameras/VentCamera.VentCamera;
 RecentlyPlaced=/Game/AlfraidWork/NewBlueprint1.NewBlueprint1;
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter;
-RecentlyPlaced=/Game/AlfraidWork/StaticCamera.StaticCamera;
+RecentlyPlaced=/Game/AlfraidWork/Cameras/StaticCamera.StaticCamera;
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
-RecentlyPlaced=/Game/AlfraidWork/MovableCube.MovableCube;
-RecentlyPlaced=/Game/AlfraidWork/CageSwitch.CageSwitch;
-RecentlyPlaced=/Game/AlfraidWork/DroppingCage.DroppingCage;
-RecentlyPlaced=/Game/AlfraidWork/AlfraidPawn.AlfraidPawn;
+RecentlyPlaced=/Game/AlfraidWork/InteractObjects/CageSwitch.CageSwitch;
+RecentlyPlaced=/Game/AlfraidWork/InteractObjects/DroppingCage.DroppingCage;
+RecentlyPlaced=/Game/AlfraidWork/AlfraidPlayer/AlfraidPawn.AlfraidPawn;
 
 [/Script/UnrealEd.EditorPerProjectUserSettings]
 bDisplayDocumentationLink=False
@@ -944,9 +1006,11 @@ ContentBrowserTab2.ExpandedCollections=
 ContentBrowserTab2.ViewMode=0
 ContentBrowserTab2.ThumbnailSizeScale=0.180000
 ContentBrowserTab2.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [MessageLog]
-LastLogListing=EditorErrors
+LastLogListing=MapCheck
 
 [AssetEditorToolkitTabLocation]
 /Game/AlfraidWork/DroppingCage.DroppingCage=0
@@ -2005,6 +2069,11 @@ CrashReporterSettings=True
 DataValidationSettings=True
 LogVisualizerSettings=True
 MeshPaintSettings=True
+DebugCameraControllerSettings=True
+TextureImportSettings=True
+ShaderPlatformQualitySettings=True
+AvfMediaSettings=True
+MagicLeapSettings=True
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
