Made Movable Block Work
After fiddleing with a raycast/line trace and parenting idea for moving a block, Compton told me to try to work with physics constraints on it and it seems to work really well.

--- a/Alfraid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Alfraid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -101,6 +101,9 @@ LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/AlfraidWork/InteractObjects/MovableCube.MovableCube
+OpenAssetsAtExit=/Game/AlfraidWork/AlfraidPlayer/AlfraidPawn.AlfraidPawn
+OpenAssetsAtExit=/Game/AlfraidWork/InteractObjects/CageSwitch.CageSwitch
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -911,22 +914,24 @@ RecastNavMesh.LOD=True
 MovableCube_C.Tick=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AlfraidWork/InteractObjects/MovableCube
-MRUItem1=/Game/AlfraidWork/AlfraidPawn
-MRUItem2=/Game/AlfraidWork/Cube_Blueprint
-MRUItem3=/Game/AlfraidWork/CameraSetBox
-MRUItem4=/Game/AlfraidWork/VentCamera
-MRUItem5=/Game/AlfraidWork/StaticCamera
-MRUItem6=/Game/AlfraidWork/VentCamera1
-MRUItem7=/Game/AlfraidWork/SwingDoor
-MRUItem8=/Game/AlfraidWork/CameraChangeBox
-MRUItem9=/Game/AlfraidWork/CageSwitch
-MRUItem10=/Game/AlfraidWork/NewBlueprint1
-MRUItem11=/Game/AlfraidWork/MovableCube
-MRUItem12=/Game/AlfraidWork/MoovableCube
-MRUItem13=/Game/AlfraidWork/DroppingCage
-MRUItem14=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem15=/Game/AlfraidWork/NewBlueprint
+MRUItem0=/Game/AlfraidWork/InteractObjects/CageSwitch
+MRUItem1=/Game/AlfraidWork/AlfraidPlayer/AlfraidPawn
+MRUItem2=/Game/AlfraidWork/InteractObjects/MovableCube
+MRUItem3=/Game/AlfraidWork/AlfraidPawn
+MRUItem4=/Game/AlfraidWork/Cube_Blueprint
+MRUItem5=/Game/AlfraidWork/CameraSetBox
+MRUItem6=/Game/AlfraidWork/VentCamera
+MRUItem7=/Game/AlfraidWork/StaticCamera
+MRUItem8=/Game/AlfraidWork/VentCamera1
+MRUItem9=/Game/AlfraidWork/SwingDoor
+MRUItem10=/Game/AlfraidWork/CameraChangeBox
+MRUItem11=/Game/AlfraidWork/CageSwitch
+MRUItem12=/Game/AlfraidWork/NewBlueprint1
+MRUItem13=/Game/AlfraidWork/MovableCube
+MRUItem14=/Game/AlfraidWork/MoovableCube
+MRUItem15=/Game/AlfraidWork/DroppingCage
+MRUItem16=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem17=/Game/AlfraidWork/NewBlueprint
 
 [PlacementMode]
 RecentlyPlaced=/Game/AlfraidWork/InteractObjects/MovableCube.MovableCube;
@@ -1967,6 +1972,7 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,IOSRuntimeSettings.Build.Remote Build Options,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,IOSRuntimeSettings.Build.Remote Build Options,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Interact,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.MoveRight,InputSettings.Bindings.AxisMappings.TurnRate,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.LookUpRate,InputSettings.Bindings.AxisMappings.LookUp,IOSRuntimeSettings.Build.Remote Build Options,
+StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
