--- a/Alfraid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Alfraid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -100,10 +100,7 @@ MRUItem0=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 LastLevel=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/AlfraidWork/InteractObjects/MovableCube.MovableCube
-OpenAssetsAtExit=/Game/AlfraidWork/AlfraidPlayer/AlfraidPawn.AlfraidPawn
-OpenAssetsAtExit=/Game/AlfraidWork/InteractObjects/CageSwitch.CageSwitch
+CleanShutdown=True
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -914,9 +911,9 @@ RecastNavMesh.LOD=True
 MovableCube_C.Tick=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AlfraidWork/InteractObjects/CageSwitch
-MRUItem1=/Game/AlfraidWork/AlfraidPlayer/AlfraidPawn
-MRUItem2=/Game/AlfraidWork/InteractObjects/MovableCube
+MRUItem0=/Game/AlfraidWork/InteractObjects/MovableCube
+MRUItem1=/Game/AlfraidWork/InteractObjects/CageSwitch
+MRUItem2=/Game/AlfraidWork/AlfraidPlayer/AlfraidPawn
 MRUItem3=/Game/AlfraidWork/AlfraidPawn
 MRUItem4=/Game/AlfraidWork/Cube_Blueprint
 MRUItem5=/Game/AlfraidWork/CameraSetBox
@@ -1024,13 +1021,14 @@ LastLogListing=MapCheck
 /Game/AlfraidWork/VentCamera.VentCamera=1
 /Game/AlfraidWork/CameraSetBox.CameraSetBox=0
 /Game/AlfraidWork/AlfraidPawn.AlfraidPawn=1
+/Game/AlfraidWork/InteractObjects/MovableCube.MovableCube=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
 
 [RootWindow]
 ScreenPosition=X=214.500 Y=84.000
-WindowSize=X=1297.500 Y=772.000
+WindowSize=X=1302.500 Y=777.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2098,4 +2096,9 @@ bDeleteSourceFilesWithAssets=False
 [SuppressableDialogs]
 DeleteVariableInUse_Warning=False
 ChangeVariableType_Warning=False
+
+[DetailCategoriesAdvanced]
+MovableCube_C.Tick=False
+MovableCube_C.Replication=False
+PropertyWrapper.Variable=False
 
