--- a/Alfraid/Config/DefaultGame.ini
+++ b/Alfraid/Config/DefaultGame.ini
@@ -1,7 +1,8 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=6C73901144FA74147C38C4B80F852B50
-ProjectName=Third Person BP Game Template
+ProjectName=Alfraid_Game
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
