--- a/Alfraid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Alfraid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -93,24 +93,24 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/AlfraidWork/AlfraidGameLevel
-MRUItem1=/Game/AlfraidWork/Title
-MRUItem2=/Game/AlfraidWork/Levels-Worlds/Title
-MRUItem3=/Game/StarterContent/Maps/StarterMap
-MRUItem4=/Game/StarterContent/Maps/Minimal_Default
-MRUItem5=/Game/StarterContent/Maps/Advanced_Lighting
-MRUItem6=/Game/AlfraidWork/Levels-Worlds/Level1
-MRUItem7=/Game/ThirdPersonBP/Maps/AlfraidGameLevel
-MRUItem8=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+MRUItem0=/Game/AlfraidWork/Levels-Worlds/Level1
+MRUItem1=/Game/AlfraidWork/Levels-Worlds/AlfraidGameLevel
+MRUItem2=/Game/AlfraidWork/AlfraidGameLevel
+MRUItem3=/Game/AlfraidWork/Title
+MRUItem4=/Game/AlfraidWork/Levels-Worlds/Title
+MRUItem5=/Game/StarterContent/Maps/StarterMap
+MRUItem6=/Game/StarterContent/Maps/Minimal_Default
+MRUItem7=/Game/StarterContent/Maps/Advanced_Lighting
+MRUItem8=/Game/ThirdPersonBP/Maps/AlfraidGameLevel
+MRUItem9=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 
 [EditorStartup]
-LastLevel=/Game/AlfraidWork/AlfraidGameLevel
+LastLevel=/Game/AlfraidWork/Levels-Worlds/Level1
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/AlfraidWork/AlfraidGameLevel.AlfraidGameLevel:PersistentLevel.AlfraidGameLevel
-OpenAssetsAtExit=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter
-OpenAssetsAtExit=/Game/AlfraidWork/AlfraidPlayer/AlfraidPawn.AlfraidPawn
+CleanShutdown=False
+OpenAssetsAtExit=/Game/AlfraidWork/AlfraidPlayer/PlayerStart_Blueprint.PlayerStart_Blueprint
+OpenAssetsAtExit=/Game/AlfraidWork/InteractObjects/CageSwitch.CageSwitch
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [DetailCategories]
@@ -1053,35 +1053,55 @@ PlayerStart_Blueprint_C.Rendering=True
 PlayerStart_Blueprint_C.Actor=True
 PlayerStart_Blueprint_C.Input=True
 PlayerStart_Blueprint_C.TransformCommon=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionConstant3Vector.MaterialExpressionConstant3Vector=True
+MaterialExpressionConstant3Vector.MaterialExpression=True
+MaterialExpressionConstant.MaterialExpressionConstant=True
+MaterialExpressionConstant.MaterialExpression=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AlfraidWork/AlfraidGameLevel
-MRUItem1=/Game/AlfraidWork/Title
-MRUItem2=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem3=/Game/AlfraidWork/AlfraidPlayer/AlfraidPawn
-MRUItem4=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem5=/Game/AlfraidWork/AlfraidPlayer/PlayerStart_Blueprint
-MRUItem6=/Game/AlfraidWork/NewWidgetBlueprint
-MRUItem7=/Game/AlfraidWork/Controlls
-MRUItem8=/Game/AlfraidWork/Levels-Worlds/Title
-MRUItem9=/Game/StarterContent/Maps/StarterMap
-MRUItem10=/Game/StarterContent/Maps/Minimal_Default
-MRUItem11=/Game/StarterContent/Maps/Advanced_Lighting
-MRUItem12=/Game/AlfraidWork/Levels-Worlds/Level1
-MRUItem13=/Game/AlfraidWork/AlfraidPlayer/NewWidgetBlueprint
-MRUItem14=/Game/AlfraidWork/PauseMenu
-MRUItem15=/Game/AlfraidWork/NewWidgetBlueprint1
-MRUItem16=/Game/AlfraidWork/InteractObjects/PickUpObject
-MRUItem17=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
-MRUItem18=/Game/AlfraidWork/InteractObjects/MovableCube
-MRUItem19=/Game/AlfraidWork/InteractObjects/CageSwitch
+MRUItem0=/Game/StarterContent/Materials/whiteboxing
+MRUItem1=/Game/AlfraidWork/Levels-Worlds/Level1
+MRUItem2=/Game/AlfraidWork/InteractObjects/CageSwitch
+MRUItem3=/Game/AlfraidWork/AlfraidPlayer/PlayerStart_Blueprint
+MRUItem4=/Game/AlfraidWork/Levels-Worlds/AlfraidGameLevel
+MRUItem5=/Game/AlfraidWork/AlfraidGameLevel
+MRUItem6=/Game/AlfraidWork/Title
+MRUItem7=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem8=/Game/AlfraidWork/AlfraidPlayer/AlfraidPawn
+MRUItem9=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem10=/Game/AlfraidWork/NewWidgetBlueprint
+MRUItem11=/Game/AlfraidWork/Controlls
+MRUItem12=/Game/AlfraidWork/Levels-Worlds/Title
+MRUItem13=/Game/StarterContent/Maps/StarterMap
+MRUItem14=/Game/StarterContent/Maps/Minimal_Default
+MRUItem15=/Game/StarterContent/Maps/Advanced_Lighting
+MRUItem16=/Game/AlfraidWork/AlfraidPlayer/NewWidgetBlueprint
+MRUItem17=/Game/AlfraidWork/PauseMenu
+MRUItem18=/Game/AlfraidWork/NewWidgetBlueprint1
+MRUItem19=/Game/AlfraidWork/InteractObjects/PickUpObject
 
 [PlacementMode]
+RecentlyPlaced=/Game/StarterContent/Materials/whiteboxing.whiteboxing;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/AlfraidWork/AlfraidPlayer/AlfraidPawn.AlfraidPawn;
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/AlfraidWork/InteractObjects/MovableCube.MovableCube;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/AlfraidWork/Cameras/CameraSetBox.CameraSetBox;
 RecentlyPlaced=/Game/AlfraidWork/Cameras/HallwayCamera.HallwayCamera;
 RecentlyPlaced=/Game/AlfraidWork/CameraChangeBox.CameraChangeBox;
