updated starting room + 2nd room.

--- a/Alfraid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Alfraid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -108,9 +108,8 @@ MRUItem9=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 LastLevel=/Game/AlfraidWork/Levels-Worlds/Level1
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/AlfraidWork/InteractObjects/Door_Wall.Door_Wall
-OpenAssetsAtExit=/Game/AlfraidWork/InteractObjects/SwingDoor.SwingDoor
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [DetailCategories]
@@ -1106,10 +1105,10 @@ PointLight.Cooking=True
 PointLight.Actor=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AlfraidWork/InteractObjects/SwingDoor
-MRUItem1=/Game/AlfraidWork/InteractObjects/Door_Wall
-MRUItem2=/Game/StarterContent/Materials/whiteboxing
-MRUItem3=/Game/AlfraidWork/Levels-Worlds/Level1
+MRUItem0=/Game/AlfraidWork/InteractObjects/Door_Wall
+MRUItem1=/Game/AlfraidWork/Levels-Worlds/Level1
+MRUItem2=/Game/AlfraidWork/InteractObjects/SwingDoor
+MRUItem3=/Game/StarterContent/Materials/whiteboxing
 MRUItem4=/Game/AlfraidWork/InteractObjects/CageSwitch
 MRUItem5=/Game/AlfraidWork/AlfraidPlayer/PlayerStart_Blueprint
 MRUItem6=/Game/AlfraidWork/Levels-Worlds/AlfraidGameLevel
@@ -1128,11 +1127,12 @@ MRUItem18=/Game/AlfraidWork/AlfraidPlayer/NewWidgetBlueprint
 MRUItem19=/Game/AlfraidWork/PauseMenu
 
 [PlacementMode]
+RecentlyPlaced=/Game/AlfraidWork/Cameras/StaticCamera.StaticCamera;
+RecentlyPlaced=/Game/AlfraidWork/Levels-Worlds/whiteboxing.whiteboxing;
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Game/AlfraidWork/AlfraidPlayer/AlfraidPawn.AlfraidPawn;
 RecentlyPlaced=/Game/AlfraidWork/InteractObjects/Door_Wall.Door_Wall;
-RecentlyPlaced=/Game/AlfraidWork/Levels-Worlds/whiteboxing.whiteboxing;
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Game/AlfraidWork/InteractObjects/MovableCube.MovableCube;
@@ -1141,7 +1141,6 @@ RecentlyPlaced=/Game/AlfraidWork/Cameras/HallwayCamera.HallwayCamera;
 RecentlyPlaced=/Game/AlfraidWork/CameraChangeBox.CameraChangeBox;
 RecentlyPlaced=/Game/AlfraidWork/Cameras/VentCamera.VentCamera;
 RecentlyPlaced=/Game/AlfraidWork/NewBlueprint1.NewBlueprint1;
-RecentlyPlaced=/Game/AlfraidWork/Cameras/StaticCamera.StaticCamera;
 RecentlyPlaced=/Script/Engine.CameraActor;/Engine/Transient.ActorFactoryCameraActor_0
 RecentlyPlaced=/Game/AlfraidWork/InteractObjects/CageSwitch.CageSwitch;
 RecentlyPlaced=/Game/AlfraidWork/InteractObjects/DroppingCage.DroppingCage;
