--- a/Alfraid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Alfraid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -74,7 +74,7 @@ MultipleInstancePositions=(X=2880,Y=1518)
 [/Script/UnrealEd.LevelEditorViewportSettings]
 CurrentPosGridSize=0
 CurrentRotGridSize=0
-CurrentScalingGridSize=6
+CurrentScalingGridSize=1
 FlightCameraControlExperimentalNavigation=False
 bAllowArcballRotate=False
 bAllowScreenRotate=False
@@ -108,8 +108,7 @@ MRUItem9=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 LastLevel=/Game/AlfraidWork/Levels-Worlds/Level1
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/AlfraidWork/InteractObjects/Door_Wall.Door_Wall
+CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
 
 [DetailCategories]
@@ -1105,8 +1104,8 @@ PointLight.Cooking=True
 PointLight.Actor=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AlfraidWork/InteractObjects/Door_Wall
-MRUItem1=/Game/AlfraidWork/Levels-Worlds/Level1
+MRUItem0=/Game/AlfraidWork/Levels-Worlds/Level1
+MRUItem1=/Game/AlfraidWork/InteractObjects/Door_Wall
 MRUItem2=/Game/AlfraidWork/InteractObjects/SwingDoor
 MRUItem3=/Game/StarterContent/Materials/whiteboxing
 MRUItem4=/Game/AlfraidWork/InteractObjects/CageSwitch
@@ -1240,9 +1239,9 @@ LastLogListing=PIE
 bHideUnrelatedNodes=False
 
 [RootWindow]
-ScreenPosition=X=213.500 Y=84.000
-WindowSize=X=1328.000 Y=803.000
-InitiallyMaximized=False
+ScreenPosition=X=608.500 Y=291.000
+WindowSize=X=1338.000 Y=813.000
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
