--- a/Alfraid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Alfraid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1126,11 +1126,11 @@ MRUItem18=/Game/AlfraidWork/AlfraidPlayer/NewWidgetBlueprint
 MRUItem19=/Game/AlfraidWork/PauseMenu
 
 [PlacementMode]
+RecentlyPlaced=/Game/AlfraidWork/AlfraidPlayer/AlfraidPawn.AlfraidPawn;
 RecentlyPlaced=/Game/AlfraidWork/Cameras/StaticCamera.StaticCamera;
 RecentlyPlaced=/Game/AlfraidWork/Levels-Worlds/whiteboxing.whiteboxing;
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Game/AlfraidWork/AlfraidPlayer/AlfraidPawn.AlfraidPawn;
 RecentlyPlaced=/Game/AlfraidWork/InteractObjects/Door_Wall.Door_Wall;
 RecentlyPlaced=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter.ThirdPersonCharacter;
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
@@ -1168,7 +1168,7 @@ PreviewShaderFormatName=None
 bPreviewFeatureLevelActive=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/AlfraidWork/Levels-Worlds
+ContentBrowserTab1.SelectedPaths=/Game/AlfraidWork/AlfraidPlayer
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -1240,7 +1240,7 @@ bHideUnrelatedNodes=False
 
 [RootWindow]
 ScreenPosition=X=608.500 Y=291.000
-WindowSize=X=1338.000 Y=813.000
+WindowSize=X=1343.000 Y=818.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -2466,4 +2466,7 @@ bPlatformUsed[48]=0
 bMaterialQualityUsed[0]=0
 bMaterialQualityUsed[1]=1
 bMaterialQualityUsed[2]=0
+
+[FEditorModeTools]
+CoordSystem=1
 
