--- a/Alfraid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Alfraid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -110,6 +110,8 @@ LastLevel=/Game/AlfraidWork/Levels-Worlds/Level1
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/AlfraidWork/InteractObjects/Door_Wall1.Door_Wall1
+OpenAssetsAtExit=/Game/AlfraidWork/InteractObjects/Door_Wall.Door_Wall
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1102,30 +1104,47 @@ PointLight.RayTracing=True
 PointLight.Tags=True
 PointLight.Cooking=True
 PointLight.Actor=True
+Door_Wall1_C.Tick=True
+Door_Wall1_C.Replication=True
+Door_Wall1_C.Rendering=True
+Door_Wall1_C.Collision=True
+Door_Wall1_C.Actor=True
+Door_Wall1_C.Input=True
+ChildActorComponent.Variable=True
+ChildActorComponent.TransformCommon=True
+ChildActorComponent.Sockets=True
+ChildActorComponent.ChildActorComponent=True
+ChildActorComponent.Rendering=True
+ChildActorComponent.Tags=True
+ChildActorComponent.ComponentReplication=True
+ChildActorComponent.Cooking=True
+ChildActorComponent.Events=True
+Door_Wall1_C.TransformCommon=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AlfraidWork/Levels-Worlds/Level1
-MRUItem1=/Game/AlfraidWork/InteractObjects/Door_Wall
-MRUItem2=/Game/AlfraidWork/InteractObjects/SwingDoor
-MRUItem3=/Game/StarterContent/Materials/whiteboxing
-MRUItem4=/Game/AlfraidWork/InteractObjects/CageSwitch
-MRUItem5=/Game/AlfraidWork/AlfraidPlayer/PlayerStart_Blueprint
-MRUItem6=/Game/AlfraidWork/Levels-Worlds/AlfraidGameLevel
-MRUItem7=/Game/AlfraidWork/AlfraidGameLevel
-MRUItem8=/Game/AlfraidWork/Title
-MRUItem9=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
-MRUItem10=/Game/AlfraidWork/AlfraidPlayer/AlfraidPawn
-MRUItem11=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
-MRUItem12=/Game/AlfraidWork/NewWidgetBlueprint
-MRUItem13=/Game/AlfraidWork/Controlls
-MRUItem14=/Game/AlfraidWork/Levels-Worlds/Title
-MRUItem15=/Game/StarterContent/Maps/StarterMap
-MRUItem16=/Game/StarterContent/Maps/Minimal_Default
-MRUItem17=/Game/StarterContent/Maps/Advanced_Lighting
-MRUItem18=/Game/AlfraidWork/AlfraidPlayer/NewWidgetBlueprint
-MRUItem19=/Game/AlfraidWork/PauseMenu
+MRUItem0=/Game/AlfraidWork/InteractObjects/Door_Wall
+MRUItem1=/Game/AlfraidWork/InteractObjects/Door_Wall1
+MRUItem2=/Game/AlfraidWork/Levels-Worlds/Level1
+MRUItem3=/Game/AlfraidWork/InteractObjects/SwingDoor
+MRUItem4=/Game/StarterContent/Materials/whiteboxing
+MRUItem5=/Game/AlfraidWork/InteractObjects/CageSwitch
+MRUItem6=/Game/AlfraidWork/AlfraidPlayer/PlayerStart_Blueprint
+MRUItem7=/Game/AlfraidWork/Levels-Worlds/AlfraidGameLevel
+MRUItem8=/Game/AlfraidWork/AlfraidGameLevel
+MRUItem9=/Game/AlfraidWork/Title
+MRUItem10=/Game/ThirdPersonBP/Blueprints/ThirdPersonCharacter
+MRUItem11=/Game/AlfraidWork/AlfraidPlayer/AlfraidPawn
+MRUItem12=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode
+MRUItem13=/Game/AlfraidWork/NewWidgetBlueprint
+MRUItem14=/Game/AlfraidWork/Controlls
+MRUItem15=/Game/AlfraidWork/Levels-Worlds/Title
+MRUItem16=/Game/StarterContent/Maps/StarterMap
+MRUItem17=/Game/StarterContent/Maps/Minimal_Default
+MRUItem18=/Game/StarterContent/Maps/Advanced_Lighting
+MRUItem19=/Game/AlfraidWork/AlfraidPlayer/NewWidgetBlueprint
 
 [PlacementMode]
+RecentlyPlaced=/Game/AlfraidWork/InteractObjects/Door_Wall1.Door_Wall1;
 RecentlyPlaced=/Game/AlfraidWork/AlfraidPlayer/AlfraidPawn.AlfraidPawn;
 RecentlyPlaced=/Game/AlfraidWork/Cameras/StaticCamera.StaticCamera;
 RecentlyPlaced=/Game/AlfraidWork/Levels-Worlds/whiteboxing.whiteboxing;
@@ -1168,7 +1187,7 @@ PreviewShaderFormatName=None
 bPreviewFeatureLevelActive=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/AlfraidWork/AlfraidPlayer
+ContentBrowserTab1.SelectedPaths=/Game
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -1240,7 +1259,7 @@ bHideUnrelatedNodes=False
 
 [RootWindow]
 ScreenPosition=X=608.500 Y=291.000
-WindowSize=X=1343.000 Y=818.000
+WindowSize=X=1348.000 Y=823.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
