Final Commit for Deadline 1
I should have the bug with the menu fixed and all of the items are working exept for the doors specifically in the Level1 map.

--- a/Alfraid/Config/DefaultEngine.ini
+++ b/Alfraid/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=Alfraid
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
+EditorStartupMap=/Game/AlfraidWork/Levels-Worlds/Title.Title
 GameDefaultMap=/Game/AlfraidWork/Title.Title
 TransitionMap=
 bUseSplitscreen=True
