--- a/Alfraid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Alfraid/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -131,10 +131,9 @@ Special Effects=False
 Synth=False
 User Created=False
 Advanced=False
-Common=False
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/AlfraidWork/Widgets
+ContentBrowserTab1.SelectedPaths=/Game/AlfraidWork/Levels-Worlds
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -162,30 +161,33 @@ LastLevel=/Game/AlfraidWork/Levels-Worlds/GameTitle
 
 [AssetEditorSubsystem]
 CleanShutdown=True
+SuppressRestorePreviouslyOpenAssetsNotification=True
+OpenAssetsAtExit=/Game/AlfraidWork/Widgets/Title_2.Title_2
 OpenAssetsAtExit=/Game/AlfraidWork/Widgets/TitleMenu.TitleMenu
-OpenAssetsAtExit=/Game/AlfraidWork/Widgets/TitleMenu_2WIP.TitleMenu_2WIP
+OpenAssetsAtExit=/Game/AlfraidWork/Widgets/Title_2-2.Title_2-2
+OpenAssetsAtExit=/Game/AlfraidWork/Levels-Worlds/GameTitle.GameTitle:PersistentLevel.GameTitle
 
 [ContentBrowserRecent]
-MRUItem0=/Game/AlfraidWork/Widgets/TitleMenu_2WIP
-MRUItem1=/Game/AlfraidWork/Levels-Worlds/GameTitle
+MRUItem0=/Game/AlfraidWork/Levels-Worlds/GameTitle
+MRUItem1=/Game/AlfraidWork/Widgets/Title_2-2
 MRUItem2=/Game/AlfraidWork/Widgets/TitleMenu
-MRUItem3=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
-MRUItem4=/Game/Mannequin/Character/Mesh/SK_Mannequin
-MRUItem5=/Game/AlfraidWork/InteractObjects/PickUpTest
-MRUItem6=/Game/AlfraidWork/PickUpInterface
-MRUItem7=/Game/AlfraidWork/AlfraidPlayer/AlfraidPawn
-MRUItem8=/Game/AlfraidWork/Levels-Worlds/AlfraidGameLevel
-MRUItem9=/Game/AlfraidWork/InteractObjects/PickUpObject
-MRUItem10=/Game/AlfraidWork/NewInterface
-MRUItem11=/Game/AlfraidWork/InteractObjects/PickUpPipe
-MRUItem12=/Game/AlfraidWork/InteractObjects/Door_Wall1
-MRUItem13=/Game/AlfraidWork/Cameras/HallwayCamera
-MRUItem14=/Game/AlfraidWork/Cameras/StaticCamera
-MRUItem15=/Game/AlfraidWork/InteractObjects/SwingDoor
-MRUItem16=/Game/AlfraidWork/Levels-Worlds/Level1
-MRUItem17=/Game/AlfraidWork/AlfraidPlayer/Checkpoint_Bp
-MRUItem18=/Game/AlfraidWork/Widgets/PauseMenu
-MRUItem19=/Game/AlfraidWork/AlfraidPlayer/NewWidgetBlueprint
+MRUItem3=/Game/AlfraidWork/Widgets/Title_2
+MRUItem4=/Game/AlfraidWork/Widgets/TitleMenu_2WIP
+MRUItem5=/Game/Mannequin/Character/Mesh/UE4_Mannequin_Skeleton
+MRUItem6=/Game/Mannequin/Character/Mesh/SK_Mannequin
+MRUItem7=/Game/AlfraidWork/InteractObjects/PickUpTest
+MRUItem8=/Game/AlfraidWork/PickUpInterface
+MRUItem9=/Game/AlfraidWork/AlfraidPlayer/AlfraidPawn
+MRUItem10=/Game/AlfraidWork/Levels-Worlds/AlfraidGameLevel
+MRUItem11=/Game/AlfraidWork/InteractObjects/PickUpObject
+MRUItem12=/Game/AlfraidWork/NewInterface
+MRUItem13=/Game/AlfraidWork/InteractObjects/PickUpPipe
+MRUItem14=/Game/AlfraidWork/InteractObjects/Door_Wall1
+MRUItem15=/Game/AlfraidWork/Cameras/HallwayCamera
+MRUItem16=/Game/AlfraidWork/Cameras/StaticCamera
+MRUItem17=/Game/AlfraidWork/InteractObjects/SwingDoor
+MRUItem18=/Game/AlfraidWork/Levels-Worlds/Level1
+MRUItem19=/Game/AlfraidWork/AlfraidPlayer/Checkpoint_Bp
 
 [MessageLog]
 LastLogListing=PIE
@@ -256,6 +258,7 @@ FrameNumberDisplayFormat=Seconds
 /Game/AlfraidWork/InteractObjects/PickUpPipe.PickUpPipe=0
 /Game/AlfraidWork/PickUpInterface.PickUpInterface:Drop=0
 /Game/Mannequin/Character/Mesh/SK_Mannequin.SK_Mannequin=0
+/Game/AlfraidWork/Widgets/TitleMenu_2WIP.TitleMenu_2WIP=0
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
@@ -936,10 +939,36 @@ PanelWidget.Performance=True
 PanelWidget.Clipping=True
 PanelWidget.Navigation=True
 PanelWidget.Localization=True
+Border.Content=True
+Border.Appearance=True
+Border.Accessibility=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=True
+Border.Clipping=True
+Border.Navigation=True
+Border.Localization=True
+Border.Events=True
+RichTextBlock.Layout=True
+RichTextBlock.Content=True
+RichTextBlock.Appearance=True
+RichTextBlock.Accessibility=True
+RichTextBlock.Wrapping=True
+RichTextBlock.Behavior=True
+RichTextBlock.Render Transform=True
+RichTextBlock.Performance=True
+RichTextBlock.Clipping=True
+RichTextBlock.Navigation=True
+RichTextBlock.Localization=True
+GameTitle_C.Tick=True
+GameTitle_C.Replication=True
+GameTitle_C.Actor=True
+GameTitle_C.Input=True
+Widget.Layout=True
 
 [RootWindow]
 ScreenPosition=X=411.500 Y=184.500
-WindowSize=X=1311.500 Y=751.500
+WindowSize=X=1316.500 Y=756.500
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -1768,8 +1797,8 @@ BlueprintGraph.TimeStamp=2020.09.01-20.09.29
 BlueprintGraph.LastCompileMethod=External
 SequencerWidgets.TimeStamp=2020.09.01-20.09.45
 SequencerWidgets.LastCompileMethod=External
-ExternalImagePicker.TimeStamp=2020.08.26-01.01.32
-ExternalImagePicker.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2020.09.01-20.09.35
+ExternalImagePicker.LastCompileMethod=External
 
 [/Script/UnrealEd.EditorLoadingSavingSettings]
 bSCCUseGlobalSettings=False
@@ -1868,7 +1897,7 @@ DeleteVariableInUse_Warning=False
 [DetailPropertyExpansion]
 StaticMeshActor=
 InputSettings="\"Object.Bindings.AxisConfig\" \"Object.Bindings.AxisConfig.AxisConfig[0]\" \"Object.Bindings.AxisConfig.AxisConfig[1]\" \"Object.Bindings.AxisConfig.AxisConfig[2]\" \"Object.Bindings.AxisConfig.AxisConfig[3]\" \"Object.Bindings.AxisConfig.AxisConfig[4]\" \"Object.Bindings.AxisConfig.AxisConfig[5]\" \"Object.Bindings.AxisConfig.AxisConfig[6]\" \"Object.Bindings.AxisConfig.AxisConfig[7]\" \"Object.Bindings.AxisConfig.AxisConfig[8]\" \"Object.Bindings.AxisConfig.AxisConfig[9]\" \"Object.Bindings.AxisConfig.AxisConfig[10]\" \"Object.Bindings.AxisConfig.AxisConfig[11]\" \"Object.Bindings.AxisConfig.AxisConfig[12]\" \"Object.Bindings.AxisConfig.AxisConfig[13]\" \"Object.Bindings.AxisConfig.AxisConfig[14]\" \"Object.Bindings.AxisConfig.AxisConfig[15]\" \"Object.Bindings.AxisConfig.AxisConfig[16]\" \"Object.Bindings.AxisConfig.AxisConfig[17]\" \"Object.Bindings.AxisConfig.AxisConfig[18]\" \"Object.Bindings.AxisConfig.AxisConfig[19]\" \"Object.Bindings.AxisConfig.AxisConfig[20]\" \"Object.Bindings.AxisConfig.AxisConfig[21]\" \"Object.Bindings.AxisConfig.AxisConfig[22]\" \"Object.Bindings.AxisConfig.AxisConfig[23]\" \"Object.Bindings.AxisConfig.AxisConfig[24]\" \"Object.Bindings.AxisConfig.AxisConfig[25]\" \"Object.Bindings.AxisConfig.AxisConfig[26]\" \"Object.Bindings.AxisConfig.AxisConfig[27]\" \"Object.Bindings.AxisConfig.AxisConfig[28]\" \"Object.Bindings.AxisConfig.AxisConfig[29]\" \"Object.Bindings.AxisConfig.AxisConfig[30]\" \"Object.Bindings.AxisConfig.AxisConfig[31]\" \"Object.Bindings.AxisConfig.AxisConfig[32]\" \"Object.Bindings.AxisConfig.AxisConfig[33]\" \"Object.Bindings.AxisConfig.AxisConfig[34]\" \"Object.Bindings.AxisConfig.AxisConfig[35]\" \"Object.Bindings.AxisConfig.AxisConfig[36]\" \"Object.Bindings.AxisConfig.AxisConfig[37]\" \"Object.Bindings.AxisConfig.AxisConfig[38]\" \"Object.Bindings.AxisConfig.AxisConfig[39]\" \"Object.Bindings.AxisConfig.AxisConfig[40]\" \"Object.Bindings.AxisConfig.AxisConfig[41]\" \"Object.Bindings.AxisConfig.AxisConfig[42]\" \"Object.Bindings.AxisConfig.AxisConfig[43]\" \"Object.Bindings.AxisConfig.AxisConfig[44]\" \"Object.Bindings.AxisConfig.AxisConfig[45]\" \"Object.Bindings.AxisConfig.AxisConfig[46]\" \"Object.Bindings.AxisConfig.AxisConfig[47]\" \"Object.Bindings.AxisConfig.AxisConfig[48]\" \"Object.Bindings.AxisConfig.AxisConfig[49]\" \"Object.Bindings.AxisConfig.AxisConfig[50]\" \"Object.Bindings.AxisConfig.AxisConfig[51]\" \"Object.Bindings.AxisConfig.AxisConfig[52]\" \"Object.Bindings.AxisConfig.AxisConfig[53]\" \"Object.Bindings.AxisConfig.AxisConfig[54]\" \"Object.Bindings.AxisConfig.AxisConfig[55]\" \"Object.Bindings.AxisConfig.AxisConfig[56]\" \"Object.Bindings.AxisConfig.AxisConfig[57]\" \"Object.Bindings.AxisConfig.AxisConfig[58]\" \"Object.Bindings.AxisConfig.AxisConfig[59]\" \"Object.Bindings.AxisConfig.AxisConfig[60]\" \"Object.Bindings.AxisConfig.AxisConfig[61]\" \"Object.Bindings.AxisConfig.AxisConfig[62]\" \"Object.Bindings.AxisConfig.AxisConfig[63]\" \"Object.Bindings.AxisConfig.AxisConfig[64]\" \"Object.Bindings.AxisConfig.AxisConfig[65]\" \"Object.Bindings.AxisConfig.AxisConfig[66]\" \"Object.Bindings.AxisConfig.AxisConfig[67]\" \"Object.Bindings.AxisConfig.AxisConfig[68]\" \"Object.Bindings.AxisConfig.AxisConfig[69]\" \"Object.Bindings.AxisConfig.AxisConfig[70]\" \"Object.Bindings.AxisConfig.AxisConfig[71]\" \"Object.Bindings.AxisConfig.AxisConfig[72]\" \"Object.Bindings.AxisConfig.AxisConfig[73]\" \"Object.Bindings.AxisConfig.AxisConfig[74]\" \"Object.Bindings.AxisConfig.AxisConfig[75]\" \"Object.Bindings.AxisConfig.AxisConfig[76]\" \"Object.Bindings.AxisConfig.AxisConfig[77]\" \"Object.Bindings.AxisConfig.AxisConfig[78]\" \"Object.Bindings.AxisConfig.AxisConfig[79]\" \"Object.Bindings.AxisConfig.AxisConfig[80]\" \"Object.Bindings.AxisConfig.AxisConfig[81]\" \"Object.Bindings.AxisConfig.AxisConfig[82]\" \"Object.Bindings.AxisConfig.AxisConfig[83]\" \"Object.Bindings.AxisConfig.AxisConfig[84]\" \"Object.Bindings.AxisConfig.AxisConfig[85]\" \"Object.Bindings.AxisConfig.AxisConfig[86]\" \"Object.Bindings.AxisConfig.AxisConfig[87]\" \"Object.Bindings.AxisConfig.AxisConfig[88]\" \"Object.Bindings.AxisConfig.AxisConfig[89]\" \"Object.Bindings.AxisConfig.AxisConfig[90]\" \"Object.Bindings.AxisConfig.AxisConfig[91]\" \"Object.Bindings.AxisConfig.AxisConfig[92]\" \"Object.Bindings.AxisConfig.AxisConfig[93]\" \"Object.Bindings.AxisConfig.AxisConfig[94]\" \"Object.Bindings.AxisConfig.AxisConfig[95]\" \"Object.Bindings.ActionMappings.ActionMappings[0]\" \"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.ActionMappings.ActionMappings[2]\" \"Object.Bindings.ActionMappings.ActionMappings[3]\" \"Object.Bindings.ActionMappings.ActionMappings[4]\" \"Object.Bindings.ActionMappings.ActionMappings[5]\" \"Object.Bindings.ActionMappings.ActionMappings[6]\" \"Object.Bindings.ActionMappings.ActionMappings[7]\" \"Object.Bindings.ActionMappings.ActionMappings[8]\" \"Object.Bindings.ActionMappings.ActionMappings[9]\" \"Object.Bindings.ActionMappings.ActionMappings[10]\" \"Object.Bindings.ActionMappings.ActionMappings[11]\" \"Object.Bindings.ActionMappings.ActionMappings[12]\" \"Object.Bindings.ActionMappings.ActionMappings[13]\" \"Object.Bindings.ActionMappings.ActionMappings[14]\" \"Object.Bindings.ActionMappings.ActionMappings[15]\" \"Object.Bindings.ActionMappings.ActionMappings[16]\" \"Object.Bindings.ActionMappings.ActionMappings[17]\" \"Object.Bindings.ActionMappings.ActionMappings[18]\" \"Object.Bindings.ActionMappings.ActionMappings[19]\" \"Object.Bindings.ActionMappings.ActionMappings[20]\" \"Object.Bindings.ActionMappings.ActionMappings[21]\" \"Object.Bindings.ActionMappings.ActionMappings[22]\" \"Object.Bindings.ActionMappings.ActionMappings[23]\" \"Object.Bindings.ActionMappings.ActionMappings[24]\" \"Object.Bindings.AxisMappings.AxisMappings[0]\" \"Object.Bindings.AxisMappings.AxisMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[2]\" \"Object.Bindings.AxisMappings.AxisMappings[3]\" \"Object.Bindings.AxisMappings.AxisMappings[4]\" \"Object.Bindings.AxisMappings.AxisMappings[5]\" \"Object.Bindings.AxisMappings.AxisMappings[6]\" \"Object.Bindings.AxisMappings.AxisMappings[7]\" \"Object.Bindings.AxisMappings.AxisMappings[8]\" \"Object.Bindings.AxisMappings.AxisMappings[9]\" \"Object.Bindings.AxisMappings.AxisMappings[10]\" \"Object.Bindings.AxisMappings.AxisMappings[11]\" \"Object.Bindings.AxisMappings.AxisMappings[12]\" \"Object.Bindings.AxisMappings.AxisMappings[13]\" \"Object.Bindings.AxisMappings.AxisMappings[14]\" \"Object.Bindings.AxisMappings.AxisMappings[15]\" \"Object.Bindings.AxisMappings.AxisMappings[16]\" \"Object.Bindings.AxisMappings.AxisMappings[17]\" \"Object.Bindings.AxisMappings.AxisMappings[18]\" \"Object.Bindings.AxisMappings.AxisMappings[19]\" \"Object.Bindings.AxisMappings.AxisMappings[20]\" \"Object.Bindings.AxisMappings.AxisMappings[21]\" \"Object.Bindings.AxisMappings.AxisMappings[22]\" \"Object.Bindings.AxisMappings.AxisMappings[23]\" \"Object.Bindings.AxisMappings.AxisMappings[24]\" \"Object.Bindings.AxisMappings.AxisMappings[25]\" \"Object.Bindings.AxisMappings.AxisMappings[26]\" \"Object.Bindings.AxisMappings.AxisMappings[27]\" \"Object.Bindings.AxisMappings.AxisMappings[28]\" \"Object.Bindings.AxisMappings.AxisMappings[29]\" \"Object.Bindings.AxisMappings.AxisMappings[30]\" \"Object.Bindings.AxisMappings.AxisMappings[31]\" "
-Object=
+Object="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
 ProjectPackagingSettings="\"Object.Packaging.IniKeyBlacklist\" \"Object.Packaging.MapsToCook\" "
 AssetManagerSettings="\"Object.Asset Manager.PrimaryAssetTypesToScan\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[0].Rules\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1]\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Directories\" \"Object.Asset Manager.PrimaryAssetTypesToScan.PrimaryAssetTypesToScan[1].Rules\" "
 DeveloperSettings="\"Object.Niagara.GraphCreationShortcuts\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[0]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[0].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[1]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[1].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[2]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[2].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[3]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[3].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[4]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[4].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[5]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[5].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[6]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[6].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[7]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[7].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[8]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[8].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[9]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[9].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[10]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[10].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[11]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[11].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[12]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[12].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[13]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[13].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[14]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[14].Input\" "
@@ -1895,6 +1924,14 @@ NiagaraSettings="\"Object.Niagara.AdditionalParameterEnums\" \"Object.Scalabilit
 NiagaraEditorSettings="\"Object.Niagara.GraphCreationShortcuts\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[0]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[0].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[1]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[1].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[2]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[2].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[3]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[3].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[4]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[4].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[5]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[5].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[6]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[6].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[7]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[7].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[8]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[8].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[9]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[9].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[10]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[10].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[11]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[11].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[12]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[12].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[13]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[13].Input\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[14]\" \"Object.Niagara.GraphCreationShortcuts.GraphCreationShortcuts[14].Input\" "
 PreviewMeshCollection="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
 DataAsset="\"Object.SkeletalMeshes\" \"Object.SkeletalMeshes\" "
+TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
+Widget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
+Visual="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" "
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Pressed\" \"Object.Appearance.ColorAndOpacity\" "
+PanelWidget=
+Image=
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
