--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -108,7 +108,7 @@ MRUItem9=/Game/ThirdPersonBP/Maps/ThirdPersonExampleMap
 LastLevel=/Game/AlfraidWork/Levels-Worlds/Title
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 SuppressRestorePreviouslyOpenAssetsNotification=True
 OpenAssetsAtExit=/Game/AlfraidWork/AlfraidPlayer/AlfraidPawn.AlfraidPawn
 OpenAssetsAtExit=/Game/AlfraidWork/InteractObjects/PickUpTest.PickUpTest
