Revert "Quick Vent"
This reverts commit 24c20fedf7bda1e3420c8b2e12562d8cf7a6ff57.

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,8 +2,8 @@
 GameName=Alfraid
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/AlfraidWork/Levels-Worlds/Title.Title
-GameDefaultMap=/Game/AlfraidWork/Title.Title
+EditorStartupMap=/Game/AlfraidWork/Levels-Worlds/GameTitle.GameTitle
+GameDefaultMap=/Game/AlfraidWork/Levels-Worlds/GameTitle.GameTitle
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
@@ -27,4 +27,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=Dynamic
 ObservedPathsTickInterval=2.000000
+
+[/Script/Engine.RendererSettings]
+r.DefaultFeature.AutoExposure=False
 
