--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -146,6 +146,8 @@ DoubleClickTime=0.200000
 +ActionMappings=(ActionName="Hold 2",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Two)
 +ActionMappings=(ActionName="Hold 3",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Three)
 +ActionMappings=(ActionName="Click",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=LeftMouseButton)
++ActionMappings=(ActionName="Use Item",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=R)
++ActionMappings=(ActionName="Inspect",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=Q)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=W)
 +AxisMappings=(AxisName="MoveForward",Scale=-1.000000,Key=S)
 +AxisMappings=(AxisName="MoveForward",Scale=1.000000,Key=Up)
