--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -27,6 +27,7 @@ AppliedDefaultGraphicsPerformance=Maximum
 [/Script/NavigationSystem.RecastNavMesh]
 RuntimeGeneration=Dynamic
 ObservedPathsTickInterval=2.000000
+AgentMaxStepHeight=100.000000
 
 [/Script/Engine.RendererSettings]
 r.DefaultFeature.AutoExposure=False
